mi primer commit

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 		<title>Ubicaciones en tiendas</title>
 		<script id="sap-ui-bootstrap"
-			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js
-        openui5-sdk-1.44.12/resources/sap-ui-core.js"
+			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
