--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <script type="text/javascript" src="qrcode/jsqrcode/alignpat.js"></script>
         <script type="text/javascript" src="qrcode/jsqrcode/databr.js"></script>
         <script id='sap-ui-bootstrap' 
-		src='https://sapui5.hana.ondemand.com/resources/sap-ui-core.js
-        openui5-sdk-1.44.12/resources/sap-ui-core.js' 
+		src='https://sapui5.netweaver.ondemand.com/resources/sap-ui-core.js' 
 		data-sap-ui-theme='sap_belize' 
 		data-sap-ui-libs='sap.m' 
 		data-sap-ui-preload='async'
